--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.3.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
